--- a/.travis.yml
+++ b/.travis.yml
@@ -27,19 +27,19 @@ script:
   # Generate and test NPM bundle
   # TODO - add semantic release, as soon as the team is ready to release
   # See https://github.com/symphonyoss/hubot-symphony as example
-  - cd npm-codegen && yarn install && yarn run bundle && yarn run test && cd -
+  # - cd npm-codegen && yarn install && yarn run bundle && yarn run test && cd -
 
   # Generate and test Java bundle
   # TODO - add 'yarn run publish'
-  - cd mvn-codegen && yarn install && yarn run generate && yarn run bundle && yarn run test && cd -
+  # - cd mvn-codegen && yarn install && yarn run generate && yarn run bundle && yarn run test && cd -
 
   # Generate C#
   # TODO - write/run test and generate bundles
-  - cd nuget-codegen && yarn install && yarn run generate && cd -
+  # - cd nuget-codegen && yarn install && yarn run generate && cd -
 
   # Generate Python
   # TODO - write/run test and generate bundles
-  - cd pypi-codegen && yarn install && yarn run generate && cd -
+  # - cd pypi-codegen && yarn install && yarn run generate && cd -
 
 deploy:
   - provider: pages
